new functionalities added

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,5 @@
 <button (click)="printToken()">Print Token</button><br/>
 <button (click)="printUserDetails()">Print User Details</button><br/>
 <button (click)="signOut()">Signout</button><br/>
+<button (click)="getdt()">getdetails</button><br/>
+
