--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,3 @@
 <h1>Login</h1>
 
-<button (click)="loginWithADFS()">Login with ADFS</button>
+<button (click)="loginWithSAML()">Login with SAML</button>
